opam-version: "2.0"
maintainer: "brandojazz@gmail.com"
version: "dev"

homepage: "https://github.com/brando90/cheerios"
dev-repo: "git+https://github.com/brando90/cheerios.git"
bug-reports: "https://github.com/brando90/cheerios/issues"
license: "BSD-2-Clause"

synopsis: "Coq library for verified serialization"
description: """
A formally verified serialization library for Coq
which defines a typeclass for serializable types and instances
for many standard library types."""

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {== "8.16.1"}
  "coq-struct-tact" {= "dev"}
]

tags: [
  "category:Computer Science/Data Types and Data Structures"
  "keyword:serialization"
  "keyword:deserialization"
  "logpath:Cheerios"
]
authors: [
  "Justin Adsuara"
  "Karl Palmskog"
  "Keith Simmons"
  "James R. Wilcox"
  "Doug Woos"
]
